syntax="proto3";

option go_package = "github.com/jonasngs/go_entry_task/grpc";

package grpc;

service UserManager {

    rpc Login(LoginRequest) returns (LoginResponse) {}

    rpc Update(UpdateRequest) returns (UpdateResponse) {}

    rpc LoadProfile(ProfileRequest) returns (ProfileResponse) {}
}

message User {
    uint64 user_id = 1;
    string username = 2;
    string password = 3;
    string nickname = 4;
    string profile_picture = 5;  
}

message Image {
    string data = 1;
    string file_extension = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
    string session_token = 3;
}

message ProfileRequest {
    string session_token = 1;
}

message ProfileResponse {
    User user = 1;
}

message LoginResponse {
    string session_token = 1;
}

message UpdateRequest {
    string nickname = 1;
    Image profile_picture = 2;
    string session_token = 3;
}

message UpdateResponse {
}

